--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "datatables.net-bs4": "^1.10.20",
         "icheck-bootstrap": "^3.0.1",
         "overlayscrollbars": "^1.12.0"
     }
