Install Bouncer package to manage roles and permissions

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "jeroennoten/laravel-adminlte": "^3.2",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "silber/bouncer": "v1.0.0-rc.8"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
